# openapi/db/models/env.py
@@ -1,0 +1,36 @@
+# -*- coding: utf-8 -*-
+from openapi.db.db import db
+from pony.orm import (Json, PrimaryKey, Required, db_session, select, desc, Set, get, Optional)
+import datetime
+from logbook import Logger
+from openapi.db.models.namespace import Namespace
+from openapi.utils.exception_handle import IsExist, IsNotExist
+import uuid
+
+log = Logger('db/env')
+
+class Env(db.Entity):
+    _table_ = 'env'
+
+    id = PrimaryKey(int, auto=True)
+    uid = Required(uuid.UUID, default=uuid.uuid1, unique=True, index=True)
+    env = Required(str)
+    create_at = Required(datetime.datetime, default=datetime.datetime.utcnow(), index=True)
+    update_at = Required(datetime.datetime, default=datetime.datetime.utcnow(), index=True)
+    delete_at = Optional(datetime.datetime,  nullable=True)
+    user = Required(str)
+    url = Required(str)
+    description = Optional(str, nullable=True)
+    info = Optional(Json)
+    namespace = Required(Namespace)
+
+    @classmethod
+    @db_session
+    def create(cls, namespace_id, env, url, description, user):
+        obj = get(n for n in Env if n.env == env and n.delete_at == None and
+                  n.namespace.id == namespace_id and n.namespace.delete_at == None)
+        if obj:
+            raise IsExist(title='不能创建同名的环境', detail=f'{env}已经存在, uuid为{obj.uid}')
+        else:
+            obj = Env(env=env, description=description, user=user, namespace=namespace_id, url=url)
+            return obj
